Creater and Geter for Image Review api (#36)
