# apis/scanner/v1alpha1/types.go
@@ -57,13 +57,14 @@ const (
 )
 
 // +genclient
-// +genclient:skipVerbs=get,list,update,patch,delete,deleteCollection,watch
+// +genclient:skipVerbs=list,update,patch,delete,deleteCollection,watch
 // +k8s:openapi-gen=true
 // +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
 
 // ImageReview describes a peer ping request/response.
 type ImageReview struct {
-	metav1.TypeMeta `json:",inline"`
+	metav1.TypeMeta   `json:",inline"`
+	metav1.ObjectMeta `json:"metadata,omitempty"`
 	// +optional
 	Request *ImageReviewRequest `json:"request,omitempty"`
 	// +optional
